public class Student extends Person {


    public Student(String name, int age, Address address) {
        super(name, age, address);
    }
}
