public class School {
    String name;
    Semester semester;

    School(String _name, Semester _semester) {
        this.name = _name;
        this.semester = _semester;
    }
}
