public class Teacher extends Person {

    public Teacher(String name, int age, Address address) {
        super(name, age, address);
    }
}
